# ict-questions-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/apps/authentication/: authentication.py  schemas.py  serializers.py  urls.py  views.py
src/apps/exams/: models.py  schema.py  serializers.py  services.py  urls.py  views.py
src/apps/exams/migrations/: 0001_initial.py  0002_alter_examattempt_table_alter_examquestion_table.py  0002_initial.py
src/apps/exams/tests/: test_exam_attempts.py  test_exam_questions.py
src/apps/questions/: filters.py  models.py  pagination.py  permissions.py  schema.py  serializers.py  urls.py  views.py
src/apps/questions/fixtures/: computing_questions.json
src/apps/questions/migrations/: 0001_initial.py  0002_initial.py  0002_rename_submmited_by_question_submmitted_by.py  0003_alter_question_reviewed_by_and_more.py  0003_rename_submmitted_by_question_submitted_by.py  0004_alter_question_level_alter_question_track.py  0005_alternative_correctanswerssources.py  0006_rename_question_correctanswerssources_alternative.py
src/apps/questions/tests/: test_alternatives.py  test_questions.py  (+1 more)
src/apps/submissions/: models.py  pagination.py  permissions.py  schemas.py  serializers.py  services.py  urls.py  views.py
src/apps/users/: authentication.py  exceptions.py  models.py  schema.py  serializers.py  services.py  urls.py  validators.py  views.py
src/core/: settings.py  urls.py
src/utils/: custom_exception_handler.py  enums.py  errors.py  pagination.py  serializers.py  validators.py
(+15 files in other folders)
